# vti_project_2

./: Cargo.toml  README.md  main.py  old_prime_gen.py  pyproject.toml
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
src/: lib.rs  prime_gen.rs
test/: ani-test.py  array_teat.py  count_test.py  test.py
